<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingStart="24dp"
    android:paddingTop="35dp"
    android:paddingEnd="24dp"
    android:paddingBottom="30dp">

    <ImageView
        android:id="@+id/image_view_logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="60dp"
        android:contentDescription="@string/app_logo_description"
        android:src="@drawable/logo_image" />

    <TextView
        android:id="@+id/text_view_register_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/image_view_logo"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="40dp"
        android:fontFamily="sans-serif-medium"
        android:letterSpacing="0.05"
        android:text="@string/Register"
        android:textSize="40sp" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_register_user_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_view_register_title"
        android:layout_margin="10dp"
        android:hint="@string/hint_user_name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_text_register_user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            tools:text="Example" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_register_user_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_input_register_user_name"
        android:layout_margin="10dp"
        android:hint="@string/hint_user_password">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_text_register_user_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            tools:text="Example" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/button_register_sign_up"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="220dp"
        android:layout_height="55dp"
        android:layout_below="@id/text_input_register_user_password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:text="@string/sign_up_button"
        android:textSize="20sp" />


</RelativeLayout>