<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/image_view_home_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="24dp"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/app_logo_description"
        android:src="@drawable/logo_image" />

    <com.github.mikephil.charting.charts.LineChart
        android:id="@+id/graph_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/image_view_home_logo"
        android:layout_marginBottom="150dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        />


    <Button
        android:id="@+id/button_add_new_point"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/button_logout"
        android:text="@string/add_new_point"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:textSize="20sp" />

    <Button
        android:id="@+id/button_logout"
        style="@style/Widget.Material3.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/logout"
        android:layout_margin="20dp"
        android:textSize="16sp" />


</RelativeLayout>