<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:id="@+id/text_view_new_point_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:fontFamily="sans-serif-black"
        android:gravity="center_horizontal"
        android:text="@string/add_new_point_entry"
        android:textSize="20sp" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_date_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        android:layout_marginEnd="70dp"
        android:hint="@string/date_and_time">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_text_date_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:inputType="date" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_temperature"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="70dp"
        android:clickable="false"
        android:hint="@string/temperature_in_c">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_text_temperature"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberSigned|number" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_humidity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="70dp"
        android:hint="@string/humidity_percent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_text_humidity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal" />

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:gravity="center">

        <com.ekn.gruzer.gaugelibrary.HalfGauge
            android:id="@+id/gauge_temperature"
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:focusable="false" />

        <com.ekn.gruzer.gaugelibrary.HalfGauge
            android:id="@+id/gauge_humidity"
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:clickable="false"
            android:focusable="false" />


    </LinearLayout>

    <Button
        android:id="@+id/button_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="80dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="80dp"
        android:text="@string/save_button"
        android:textSize="18sp" />

</LinearLayout>